<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quick_view"
            android:icon="@mipmap/ic_nav_drawer_quick_view"
            android:title="@string/quick_view_label"/>
        <item
            android:id="@+id/nav_episodes"
            android:icon="@mipmap/ic_nav_drawer_unseen"
            android:title="@string/episodes_label"/>
        <item
            android:id="@+id/nav_pending_shows"
            android:icon="@mipmap/ic_nav_drawer_pending"
            android:title="@string/pending_shows_label"/>
        <item
            android:id="@+id/nav_archived_shows"
            android:icon="@mipmap/ic_nav_drawer_archived"
            android:title="@string/archived_shows_label"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_nav_drawer_friends"
            android:title="@string/friends_label"/>
    </group>

    <item android:title="Compte">
        <menu>
            <item
                android:id="@+id/nav_deconnection"
                android:icon="@mipmap/ic_nav_drawer_disconnect"
                android:title="Déconnexion"/>
        </menu>
    </item>


</menu>
