<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.old.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_episodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episodes_label"/>

        <Button
            android:id="@+id/home_pending_shows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending_shows_label"/>

        <Button
            android:id="@+id/home_archived_shows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/archived_shows_label"/>

        <Button
            android:id="@+id/home_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends_label"/>

        <Button
            android:id="@+id/home_deconnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/deconnexion_label"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/home_shows_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout">
    </TableLayout>
</RelativeLayout>
